# vaglito-ms-products

./: docker-compose.yaml  main.py  pyproject.toml  readme.md
exceptions/: handlers.py
models/: brand.py  category.py  product.py
router/: brand.py  category.py  product.py
schemas/: brand.py  category.py  product.py
settings/: database.py
